SUBDIRS = man
EXTRA_DIST = quickstart.txt streaming-howto.txt python-howto.txt \
	snapshot-howto.txt kernel-CodingStyle.txt \
	live-reading-howto.txt live-reading-protocol.txt \
	relayd-architecture.txt

dist_doc_DATA = quickstart.txt streaming-howto.txt python-howto.txt \
	snapshot-howto.txt live-reading-howto.txt \
	live-reading-protocol.txt valgrind-howto.txt
